[package]
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "arienai"
version = "0.1.0"
resolver = "2"

[features]
stm32p103 = []
stm32_discovery = []
stm32f1xx = ["stm32f1xx-hal/stm32f103", "stm32f1xx-hal/rt"]
lm3s6965 = []
default = ["lm3s6965"]

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-itm = "0.4.2"
alloc-cortex-m = "0.4.0"
volatile-register = "0.2.1"
rand_hc = "0.3.1"
rand_core = "0.6.3"

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal"
rev = "e790b27"
optional = true 

[dependencies.sha2]
version = "0.9.8"
default-features = false

[dependencies.rsa]
git = "https://github.com/RustCrypto/RSA"
rev = "3b7ee86"
default-features = false
features = ["alloc", "pem"]

[[bin]]
name = "arienai"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
