[package]
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "arienai"
version = "0.1.0"
resolver = "2"

[dependencies]
gd32vf103xx-hal = "0.5.0"
riscv-rt = "0.8.0"
riscv = "0.7.0"
longan-nano = "0.3.0"
panic-halt = "0.2.0"
volatile-register = "0.2.1"
rand_hc = "0.3.1"
rand_core = "0.6.3"
linked_list_allocator = "0.9.1"
nb = "*"

[dependencies.num-bigint]
package = "num-bigint-dig"
default-features = false
version = "^0.7"

[dependencies.rand]
version = "0.8.4"
default-features = false

[dependencies.sha2]
version = "0.9.8"
default-features = false

[dependencies.rsa]
git = "https://github.com/RustCrypto/RSA"
rev = "3b7ee86"
default-features = false
features = ["alloc", "pem"]

[[bin]]
name = "arienai"
test = false
bench = false

[profile.release]
opt-level = "z"
codegen-units = 1
debug = true
lto = true
