[package]
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "arienai"
version = "0.1.0"
resolver = "2"

[dependencies]
gd32vf103xx-hal = "0.5.0"
riscv-rt = "0.8.0"
riscv = "0.7.0"
longan-nano = { version = "0.3.0", features = ["lcd"] }
panic-halt = "0.2.0"
volatile-register = "0.2.1"
rand_hc = "0.3.1"
rand_core = "0.6.3"
linked_list_allocator = "0.9.1"
nb = "*"
embedded-graphics = "0.7.1"
sha2-const = "0.1.2"

[dependencies.crypto-bigint]
version = "0.3.2"
default-features = false
features = ["generic-array"]

[dependencies.num-bigint]
package = "num-bigint-dig"
default-features = false
version = "^0.7"

[dependencies.rand]
version = "0.8.4"
default-features = false

[[bin]]
name = "arienai"
test = false
bench = false

[profile.release]
opt-level = "z"
codegen-units = 1
debug = true
lto = true
